SDKs/1password.com/events/1.0.0/java/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'org.openapis.openapi:openapi:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import org.openapis.openapi.SDK;

import org.openapis.openapi.models.operations.GetItemUsagesSecurity;
import org.openapis.openapi.models.operations.GetItemUsagesRequest;
import org.openapis.openapi.models.operations.GetItemUsagesResponse;
import org.openapis.openapi.models.shared.Cursor;
import org.openapis.openapi.models.shared.ResetCursor;
import org.openapis.openapi.models.shared.SchemeJwtsa;

public class Application {
    public static void main(String[] args) {
        try {
            SDK sdk = SDK.builder()
                .build();

            GetItemUsagesRequest req = new GetItemUsagesRequest() {{
                security = new GetItemUsagesSecurity() {{
                    jwtsa = new SchemeJwtsa() {{
                        authorization = "Bearer YOUR_BEARER_TOKEN_HERE";
                    }};
                }};
                request = new ResetCursor() {{
                    endTime = "2020-06-11T16:32:50-03:00";
                    limit = 5928.45;
                    startTime = "2020-06-11T16:32:50-03:00";
                }};
            }};            

            GetItemUsagesResponse res = sdk.apiV1.getItemUsages(req);

            if (res.getItemUsages200ApplicationJSONObject.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations


### apiV1

* `getItemUsages` - Retrieves item usages
* `getSignInAttempts` - Retrieves sign-in attempts

### auth

* `getAuthIntrospect` - Performs introspection of the provided Bearer JWT token
<!-- End SDK Available Operations -->

### Maturity

This SDK is in beta, and there may be breaking changes between versions without a major version update. Therefore, we recommend pinning usage 
to a specific package version. This way, you can install the same version each time without breaking changes unless you are intentionally 
looking for the latest version.

### Contributions

While we value open-source contributions to this SDK, this library is generated programmatically. 
Feel free to open a PR or a Github issue as a proof of concept and we'll do our best to include it in a future release !

### SDK Created by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
